// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActivityActions > Snapshot tests > should match snapshot for cluster actions 1`] = `
<div
  class="flex items-center justify-between "
>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="default outline text-xs"
      data-testid="button"
    >
      View All 
      5
    </button>
  </div>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="default ghost h-8 w-8 p-0"
      data-testid="button"
    >
      <div
        data-testid="more-vertical-icon"
      />
    </button>
  </div>
</div>
`;

exports[`ActivityActions > Snapshot tests > should match snapshot for compact variant 1`] = `
<div
  class="flex items-center justify-between "
>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="sm ghost h-8 w-8 p-0"
      data-testid="button"
    >
      <div
        data-testid="eye-icon"
      />
    </button>
    <button
      class="action-button warning sm"
      data-testid="action-button"
    >
      <div
        data-testid="alert-triangle-icon"
      />
    </button>
    <button
      class="action-button secondary sm"
      data-testid="action-button"
    >
      <div
        data-testid="user-icon"
      />
    </button>
  </div>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="action-button critical sm"
      data-testid="action-button"
    >
      <div
        data-testid="alert-triangle-icon"
      />
    </button>
    <button
      class="action-button secondary sm"
      data-testid="action-button"
    >
      <div
        data-testid="file-text-icon"
      />
    </button>
    <button
      class="sm ghost h-8 w-8 p-0"
      data-testid="button"
    >
      <div
        data-testid="more-vertical-icon"
      />
    </button>
  </div>
</div>
`;

exports[`ActivityActions > Snapshot tests > should match snapshot for full variant 1`] = `
<div
  class="flex items-center justify-between "
>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="default ghost h-8 w-8 p-0"
      data-testid="button"
    >
      <div
        data-testid="eye-icon"
      />
    </button>
    <button
      class="action-button warning default"
      data-testid="action-button"
    >
      <div
        data-testid="alert-triangle-icon"
      />
      Escalate
    </button>
    <button
      class="action-button secondary default"
      data-testid="action-button"
    >
      <div
        data-testid="user-icon"
      />
      Assign
    </button>
  </div>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="action-button critical default"
      data-testid="action-button"
    >
      <div
        data-testid="alert-triangle-icon"
      />
      Create Incident
    </button>
    <button
      class="action-button secondary default"
      data-testid="action-button"
    >
      <div
        data-testid="file-text-icon"
      />
      Add to Case
    </button>
    <button
      class="default ghost h-8 w-8 p-0"
      data-testid="button"
    >
      <div
        data-testid="more-vertical-icon"
      />
    </button>
  </div>
</div>
`;
